// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['Main matches the snapshot: loaded 1'] = `
<div
  className="main-container"
>
  <div
    className="header-arrow"
  />
  <div
    className="window"
  >
    <nav
      className="navbar navbar-expand-lg navbar-dark bg-primary"
    >
      <div
        className="mx-auto font-weight-bold text-center text-white"
      >
        Hotelier
      </div>
    </nav>
    <div
      className="window-content"
    >
      <div
        className="pane"
      >
        <div>
          <ul
            className="list-group"
          >
            <li
              className="list-group-item list-group-item-action server-item"
            >
              <div
                className="d-flex justify-content-between"
              >
                <div
                  className="server-name server-name--running"
                  onClick={[Function]}
                >
                  server1
                </div>
                <div
                  className="float-right"
                >
                  <div
                    className="d-inline"
                  />
                  <div
                    className="d-inline mx-1"
                  >
                    <button
                      className="btn toggle-state-button btn-danger text-white"
                      onClick={[Function]}
                      title="Toggle"
                      type="button"
                    >
                      <span
                        className="tcon tcon-remove tcon-remove--chevron-right "
                      />
                    </button>
                  </div>
                  <div
                    className="d-inline"
                  >
                    <button
                      className="btn btn-light mr-1"
                      onClick={[Function]}
                      title="Logs"
                      type="button"
                    >
                      <i
                        className="fas fa-bars"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="list-group-item list-group-item-action server-item"
            >
              <div
                className="d-flex justify-content-between"
              >
                <div
                  className="server-name server-name--stopped"
                  onClick={[Function]}
                >
                  server2
                </div>
                <div
                  className="float-right"
                >
                  <div
                    className="d-inline"
                  />
                  <div
                    className="d-inline mx-1"
                  >
                    <button
                      className="btn toggle-state-button btn-light"
                      onClick={[Function]}
                      title="Toggle"
                      type="button"
                    >
                      <span
                        className="tcon tcon-remove tcon-remove--chevron-right tcon-transform"
                      />
                    </button>
                  </div>
                  <div
                    className="d-inline"
                  >
                    <button
                      className="btn btn-light mr-1"
                      onClick={[Function]}
                      title="Logs"
                      type="button"
                    >
                      <i
                        className="fas fa-bars"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer
      className="fixed-bottom bg-primary"
    >
      <div
        className="float-left"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          Hotel
        </button>
      </div>
      <div
        className="float-right"
      >
        <div
          className="btn-group"
        >
          <button
            className="btn btn-primary"
            id="close-app"
            onClick={[Function]}
          >
            <span
              className="fas fa-power-off"
              title="Quit"
            />
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports['Main matches the snapshot: loading 1'] = `
<div
  className="main-container"
>
  <div
    className="header-arrow"
  />
  <div
    className="window"
  >
    <nav
      className="navbar navbar-expand-lg navbar-dark bg-primary"
    >
      <div
        className="mx-auto font-weight-bold text-center text-white"
      >
        Hotelier
      </div>
    </nav>
    <div
      className="window-content"
    >
      <div
        className="pane"
      >
        <div
          className="summary"
        >
          Loading…
        </div>
        <div>
          <ul
            className="list-group"
          />
        </div>
      </div>
    </div>
    <footer
      className="fixed-bottom bg-primary"
    >
      <div
        className="float-left"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          Hotel
        </button>
      </div>
      <div
        className="float-right"
      >
        <div
          className="btn-group"
        >
          <button
            className="btn btn-primary"
            id="close-app"
            onClick={[Function]}
          >
            <span
              className="fas fa-power-off"
              title="Quit"
            />
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
